# sql-guard

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
backend/: pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/api/: approvals.py  audit.py  auth.py  policies.py  queries.py  templates.py  users.py
backend/src/cli/: admin_commands.py
backend/src/models/: approval_request.py  audit_log.py  database_connection.py  security_policy.py  sql_template.py  user.py
backend/src/security/: pii_masker.py  rbac.py  sql_validator.py
backend/src/services/: approval_service.py  audit_service.py  auth_service.py  security_service.py  sql_execution_service.py  template_service.py
backend/tests/contract/: test_approvals.py  test_auth.py  test_queries.py  test_templates.py
backend/tests/integration/: test_approval_workflow.py  test_audit_logging.py  test_rbac.py  test_sql_security.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  init-audit-db.sql  init-db.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/approval-queue/: ApprovalQueue.tsx
frontend/src/components/audit-log/: AuditLog.tsx
frontend/src/components/policy-config/: PolicyConfig.tsx
frontend/src/components/sql-console/: SQLConsole.tsx
frontend/src/components/template-catalog/: TemplateCatalog.tsx
frontend/src/components/ui/: button.tsx  select.tsx  toaster.tsx
frontend/src/components/user-management/: UserManagement.tsx
frontend/src/hooks/: useAuth.ts  useAuth.tsx  useQueries.ts  useTemplates.ts
frontend/src/pages/: Approvals.tsx  Audit.tsx  Console.tsx  Login.tsx  Policies.tsx  Templates.tsx  Users.tsx
frontend/src/services/: api.ts  auth.ts  websocket.ts
frontend/tests/e2e/: test_approvals.spec.ts  test_auth.spec.ts  test_sql_console.spec.ts  test_templates.spec.ts
specs/001-sql-guard-sql/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-sql-guard-sql/contracts/: approvals.yaml  auth.yaml  queries.yaml  templates.yaml
